--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Silentgyuu",email = "Silentgyuu@gmail.com"}
 ]
 readme = "README.md"
-requires-python = "3.11"
+requires-python = ">=3.11"
 dependencies = [
     "numpy (==1.26.4)",
     "pandas (==1.5.3)",
